--- a/config/locales/assignment.en.yml
+++ b/config/locales/assignment.en.yml
@@ -30,6 +30,14 @@ en:
       rubric_name: Rubric Title
       rubric_version: Version
       rubric_minimum: Minimum requirements not met
+    submissions:
+      new_header: New Response
+      sub_text_lbl: Text Response
+      sub_link_lbl: Link to Response
+      create: Create a New Response
+      save: Save Response as Draft
+      submit: Submit a New Response
+      past_header: Previous Responses
     create_success: Assignment was created successfully!
     destroy_success: Assignment was destroyed successfully!
     update_success: Assignment was updated successfully!
