--- a/config/locales/assignment.en.yml
+++ b/config/locales/assignment.en.yml
@@ -43,6 +43,10 @@ en:
       submitted: Submission Date
       withdrawn: Withdrawn Date
       submitter: Submitted by
+      submit_response: Submit for Grading
+      submit_revision: Submit Revision for Grading
+      draft_response: Save Draft for Further Editing
+      draft_revision: Save Revision for Further Editing
     create_success: Assignment was created successfully!
     destroy_success: Assignment was destroyed successfully!
     update_success: Assignment was updated successfully!
