progress on submission saving

--- a/config/locales/assignment.en.yml
+++ b/config/locales/assignment.en.yml
@@ -47,6 +47,7 @@ en:
       submit_revision: Submit Revision for Grading
       draft_response: Save Draft for Further Editing
       draft_revision: Save Revision for Further Editing
+      new_btn: New response
     create_success: Assignment was created successfully!
     destroy_success: Assignment was destroyed successfully!
     update_success: Assignment was updated successfully!
