--- a/config/locales/consent_forms.en.yml
+++ b/config/locales/consent_forms.en.yml
@@ -7,6 +7,9 @@ en:
     consent_form: Research Consent Form
     edit:
       title: Consent Form
+      create_btn: Create consent form
+      save_btn: Save consent form
+      file_select_btn: Select file
     index:
       title: Listing Consent Forms
       name_col: Name
