Tests are closer to running.

--- a/config/locales/rubric_row_feedback.en.yml
+++ b/config/locales/rubric_row_feedback.en.yml
@@ -1,5 +1,5 @@
 en:
-  rubric_row_feedback:
+  rubric_row_feedbacks:
     feedback_required: >
       Feedback is required for anything less than a perfect
       score.
