--- a/config/locales/rubric_row_feedback.en.yml
+++ b/config/locales/rubric_row_feedback.en.yml
@@ -1,5 +1,6 @@
 en:
   rubric_row_feedbacks:
-    feedback_required: >
-      Feedback is required for anything less than a perfect
-      score.
+    error:
+      feedback_required: >
+        Feedback is required for anything less than a perfect
+        score.
