Updating AdminListToolbar for column toggling

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -23,3 +23,4 @@ en:
   admin:
     accept_decline: Accept/Decline
     new_activity: New {{activity_type}}
+    toggle_columns_plc: Show hidden columns
