--- a/config/locales/projects.en.yml
+++ b/config/locales/projects.en.yml
@@ -21,11 +21,11 @@ en:
     closes: Closes every
     groups_intro: >
       This project currently contains %{group_count} groups as specified below. Their
-      respective diversity scores are listed below their names. You may recalculate
-      any or all of those diversity scores.
-    diversity_calculated: Diversity score calculated based on current data.
-    diversities_calculated: Diversity scores calculated based on current data.
-    recalculate_diversities: Calculate all diversity scores!
+      respective perspective points are listed below their names. You may recalculate
+      any or all of those perspective points scores.
+    diversity_calculated: Perspective points calculated based on current data.
+    diversities_calculated: Perspective points calculated based on current data.
+    recalculate_diversities: Calculate all perspective points!
     wrong_group: The specified group is not in this project.
     performance_explained: >
       This value reflects your rate of response to CoLab's weekly self-
@@ -47,4 +47,4 @@ en:
     new:
       title: New Project
     projects: Projects
-    diversity_scores: Diversity scores
+    diversity_scores: Perspective points
