--- a/config/locales/courses.en.yml
+++ b/config/locales/courses.en.yml
@@ -82,6 +82,7 @@ en:
     wizard:
       advanced_switch: Switch to advanced mode
       wizard_switch: Switch to assist me mode
+      name_number_lbl: Description
       name_number_ttl: What course is this?
       name_number_desc: >
         Please enter the course title and the course identifier. These
@@ -93,6 +94,7 @@ en:
         Below you can enter a description of the course. It is rarely
         shown to students or instructors, so this is optional and
         primarily for your benefit.
+      dates_lbl: Dates
       dates_ttl: When will this course run?
       dates_desc: >
         Please enter the start and end date for this course. All
@@ -104,6 +106,7 @@ en:
         We assume that this course will run in the {{timezone}} timezone
         just like your school. However, you can click here to change
         this. Perhaps for a study abroad course?
+      confirm_save_lbl: Save
       confirm_save_ttl: Is this all correct?
       confirm_save_desc: >
         Please review all the information we've captured so far to make
@@ -111,6 +114,46 @@ en:
         you can use the buttons above to go to fix it. After the course
         is saved, you'll be able to add activities and begin enrolling
         students.
+      instructors_lbl: Instructors
+      instructors_ttl: Who will teach this course?
+      instructor_desc: >
+        Please add any instructors involved in teaching this course.
+      instructor_remove_desc: >
+        Note: Only a CoLab.online school administrator can remove themselves
+        from a course.
+      project_lbl: Add Project
+      project_ttl: Add a group project?
+      project_desc: >
+        By creating a project for your course, you can assign students
+        to teams and have them check-in on a weekly basis and give you
+        insight into how the team is doing. Would you like to create a
+        team now?
+      project_start_week: Which week should the project begin?
+      experience_sim_init: >
+        CoLab.online can take your students through a simulated teamwork
+        experience to help introduce teamwork and facilitate discussion
+        on what to expect of it. Would you like to offer this?
+      project_support_site: >
+        Would you like more information about what CoLab.online does,
+        more tools to make the most of what we offer and maybe a look at
+        some of the research we're based upon? Visit
+      readings_lbl: Readings
+      readings_ttl: Add gamified collaborative readings?
+      readings_desc: >
+        CoLab.online's reading assignments ask students to extract and
+        define terms from the readings that were meaningful to them and
+        then gives you, the instructor, an opportunity to provide them
+        with feedback. Then, our Bingo! worksheets let them review their
+        new vocabulary in the form of a game.
+      students_lbl: Students
+      students_ttl: Enroll students
+      students_desc: >
+        You may manually enroll students by entering their email
+        addresses in the box below, but it is usually easier to have
+        them scan the image at right to have them enroll themselves. You
+        can download the image for embedding within a syllabus by
+        clicking the image or the text under it.
+      enrollment_qr_lbl: Download the enrollment QR code
       next_btn: Next
       prev_btn: Previous
       save_btn: Save
