--- a/config/locales/bingo_games.en.yml
+++ b/config/locales/bingo_games.en.yml
@@ -11,6 +11,7 @@ en:
     game_details_pnl: Game details
     response_pnl: Response data
     save_status: Saving game
+    game_dates: Game availability dates
     open_date: Open date
     close_date: Game date
     lead_time: Days for instructor review
