Reorganised the terms list results

--- a/config/locales/bingo_games.en.yml
+++ b/config/locales/bingo_games.en.yml
@@ -7,6 +7,7 @@ en:
       definition: Definition
       feedback: Feedback
       concept: Concept
+      credit: Credit
     create_bingo_btn: Create Bingo Game
     game_details_pnl: Game details
     response_pnl: Response data
