--- a/config/locales/profiles.en.yml
+++ b/config/locales/profiles.en.yml
@@ -46,6 +46,7 @@ en:
       prompt: Display settings
       ui_theme: What UI theme would you like to use?
       language: What language would you like to use for CoLab?
+      time_zone: What time zone are you in?
       anonymize: Anonymize names?
     demographics: 
       prompt: >
