--- a/config/locales/intro.en.yml
+++ b/config/locales/intro.en.yml
@@ -15,11 +15,26 @@ en:
         instructor: CoLab features for instructors
     why_slides:
         captions:
-            one: We dream of teamwork that looks like this
-            two: But we often learn that...
-            three: ...it feels like an inequitable experience
-            four: And negative experiences take many shapes
-            five: Or possibly the results just feel cookie-cutter and boring?
+            one: >
+                Collaboration can look different for 
+                everyone. But have you ever experienced this in group projects?
+            two: >  
+                Group Domination: One person takes over and 
+                thinks everyone else's opinion is not good enough
+            three: > 
+                Have you ever been a George?
+                Leave it to George: One person does all the work and 
+                everyone else watches
+            four: >
+                Or... does this sound familiar? 
+                Social loafers: One or more students slack off while 
+                everyone else does the work 
+            five: >
+                What would you do? Don't wait till the end of the semester to tell your professor! 
+                What if there was a way for your professor to help before things got out of hand? 
+                Now there is! 
+                CoLab can help! 
+                
     images:
         student_concern: Student talks to teacher
         normally_functioning: A group of students where all are engaged
