more group assignment fixes

--- a/config/locales/assignment.en.yml
+++ b/config/locales/assignment.en.yml
@@ -74,7 +74,7 @@ en:
       update_failed: >
         Unable to save assignment. Please resolve the errors below
         and try again.
-      group_invalid: >
+      group_required: >
         To enable groups, you must also select the projct from which to
         pull them (the groups).
       no_update_error: Successfully saved the assignment.
